@@ -1,9 +1,20 @@
 # TipCalculatorModification
-# instructions
+###### Jawad Haider
+## Instructions
 
 13.6 (Tip Calculator Modification) The Tip Calculator app from Section 12.5 does not need a Button to perform its calculations.
 Re-implement this app to use property listeners to perform the calculations whenever the user modifies the bill amount or changes the custom tip percentage.
 Also use a property binding to update the Label that displays the tip percentage.
+
+## Software Requirements:
+1. Scene Builder installation
+[Official site](https://gluonhq.com/products/scene-builder/) to download Scene Builder.
+
+2. [Official site](https://openjfx.io/) of JavaFX where you can find official documentation as well as download links.
+Step-by-step [instructions] (https://openjfx.io/openjfx-docs/) on how to install and run JavaFX applications.
+
+=> --module-path ${PATH_TO_JAVAFX} --add-modules javafx.controls,javafx.fxml
+
 # ScreenShots
 
 ![](img/Screenshot%20from%202020-12-22%2006-54-24.png)
